# Prog3-WS2021

./: .gitignore  README.md
.github/workflows/: test_backend_service.yml
docs/: README_BACKEND.md  README_BACKEND_WINDOWS.md  README_FRONTEND.md
kanban-board-app/: .gitignore  angular.json  karma.conf.js  package-lock.json  package.json  tslint.json
kanban-board-app/src/: index.html
kanban-board-app/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts
kanban-board-app/src/lib/data-access/: board.ts  column.ts  item.ts
kanban-board-app/src/lib/data-access/models/: board.ts  column.ts  index.ts  item.ts
kanban-board-app/src/lib/data-access/services/: backend.service.ts
kanban-board-app/src/lib/feature/board/: board.component.html  board.component.scss  board.component.ts
kanban-board-app/src/lib/feature/column/: column.component.html  column.component.scss  column.component.ts
kanban-board-app/src/lib/feature/item/: item.component.html  (+2 more)
kanban-board-service/: CMakeLists.txt
kanban-board-service/src/: CMakeLists.txt  Service.cpp
kanban-board-service/src/Api/: Endpoint.cpp  Endpoint.hpp
kanban-board-service/src/Api/Parser/: JsonParser.cpp  JsonParser.hpp  ParserIf.hpp
kanban-board-service/src/Core/: BoardManager.cpp  BoardManager.hpp
kanban-board-service/src/Core/Exception/: NotImplementedException.hpp
kanban-board-service/src/Core/Model/: Board.cpp  Board.hpp  Column.cpp  Column.hpp  Item.cpp  Item.hpp
kanban-board-service/src/Repository/: RepositoryIf.hpp
kanban-board-service/src/Repository/SQLite/: BoardRepository.cpp  BoardRepository.hpp
kanban-board-service/test/: conftest.py  readme.md  requirements.txt  testAll.sh  test_service.py
(+9 files in other folders)
